appId: com.kylebrowning.Landmarks
---
- launchApp
- tapOn: "Deep Links"
- tapOn: "Edit Landmark"
- tapOn: "Name"
- inputText: " QA"
- takeScreenshot: "inputText"
